# CommandGL

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  bit__manipulation_8hpp.html  bit__manipulation_8hpp.js  bit__manipulation_8hpp_source.html  bug.html  cgl_8cpp.html  cgl_8hpp.html  cgl_8hpp.js  cgl_8hpp_source.html  character__buffer_8cpp.html  character__buffer_8hpp.html  character__buffer_8hpp.js  character__buffer_8hpp_source.html  character__cell_8hpp.html  character__cell_8hpp.js  character__cell_8hpp_source.html  checked_8h.html  checked_8h_source.html  classMyLibrary_1_1Example-members.html  classMyLibrary_1_1Example.html  classMyLibrary_1_1SecondExample-members.html  classMyLibrary_1_1SecondExample.html  classMyLibrary_1_1SubclassExample-members.html  classMyLibrary_1_1SubclassExample.html  classcgl_1_1BaseFilter-members.html  classcgl_1_1BaseFilter.html  classcgl_1_1BaseFilter.js  classcgl_1_1BaseFilterableBuffer-members.html  classcgl_1_1BaseFilterableBuffer.html  classcgl_1_1BaseFilterableBuffer.js  classcgl_1_1BitmapFont-members.html  classcgl_1_1BitmapFont.html  classcgl_1_1BitmapFont.js  classcgl_1_1CharacterBuffer-members.html  (+675 more)
.github/workflows/: doxygen.yml
CommandGL/include/: bit_manipulation.hpp  cgl.hpp  character_buffer.hpp  character_cell.hpp  color.hpp  console.hpp  console_font.hpp  drawable.hpp  errors.hpp  event.hpp  event_manager.hpp  filter_pipeline.hpp  filters.hpp  framework.hpp  global_memory.hpp  keycodes.hpp  matrix3.hpp  numeric_types.hpp  screen_buffer.hpp  text.hpp  texture.hpp  timing.hpp  transform.hpp  vector2.hpp
CommandGL/src/: CMakeLists.txt  cgl.cpp  character_buffer.cpp  color.cpp  console.cpp  drawable.cpp  errors.cpp  event.cpp  event_manager.cpp  events.cpp  filters.cpp  framework.cpp  global_memory.cpp  keycodes.cpp  screen_buffer.cpp  text.cpp  texture.cpp  timing.cpp  transform.cpp  vector2.cpp
Textil/: CMakeLists.txt
Textil/include/: bit_manipulation.hpp  character_cell.hpp  color.hpp  console.hpp  drawable.hpp  drawables.hpp  errors.hpp  event.hpp  event_manager.hpp  filter_pipeline.hpp  filters.hpp  framework.hpp  global_memory.hpp  keycodes.hpp  matrix3.hpp  numeric_types.hpp  render.hpp  text.hpp  texture.hpp  til.hpp  timing.hpp  transform.hpp  vector2.hpp  window.hpp  window_manager.hpp
Textil/src/: CMakeLists.txt  color.cpp  console.cpp  drawable.cpp  drawables.cpp  errors.cpp  event_manager.cpp  events.cpp  filters.cpp  framework.cpp  global_memory.cpp  keycodes.cpp  render.cpp  text.cpp  texture.cpp  til.cpp  timing.cpp  transform.cpp  vector2.cpp  window.cpp  window_manager.cpp
cmake/: CommandGLConfig.cmake.in  TextilConfig.cmake.in
docs/: Doxyfile  examples.md  getting_started.md  header.html
examples/: CMakeLists.txt  test.cpp
examples/basics/: CMakeLists.txt  basics.cpp
examples/interactive_canvas/: CMakeLists.txt  (+1 more)
examples/tour/: CMakeLists.txt  table_of_contents.md
examples/tour/basics/: CMakeLists.txt  basics.cpp
examples/tour/console/: console.cpp  console.md
examples/tour/drawing/: drawing.cpp  drawing.md
examples/tour/events/: events.cpp  events.md
examples/tour/setup/: setup.cpp  setup.md
html/: cgl_8hpp_source.html  classcgl_1_1CharacterBuffer-members.html  classcgl_1_1CharacterBuffer.html  classcgl_1_1CharacterBuffer.js  classcgl_1_1Clock-members.html  classcgl_1_1Clock.js  classcgl_1_1Color-members.html  classcgl_1_1Color.html  classcgl_1_1Color.js  classcgl_1_1Console-members.html  classcgl_1_1ConsoleFont-members.html  classcgl_1_1Drawable-members.html  classcgl_1_1Event-members.html  classcgl_1_1Event.html  classcgl_1_1Event.js  classcgl_1_1EventManager-members.html  classcgl_1_1FilterPipeline-members.html  classcgl_1_1FilterPipeline.html  classcgl_1_1Framework-members.html  classcgl_1_1Framework.js  classcgl_1_1GlobalMemory-members.html  classcgl_1_1Matrix3-members.html  classcgl_1_1Matrix3.html  classcgl_1_1ScreenBuffer-members.html  classcgl_1_1ScreenBuffer.html  classcgl_1_1Transform-members.html  classcgl_1_1Transform.html  classcgl_1_1Transformable-members.html  classcgl_1_1Transformable.html  classcgl_1_1Vector2-members.html  classcgl_1_1Vector2.html  classcgl_1_1drawables_1_1Mesh-members.html  classcgl_1_1drawables_1_1Rectangle-members.html  classcgl_1_1drawables_1_1Rectangle.html  classcgl_1_1drawables_1_1Triangle-members.html  classes.html  color_8hpp_source.html  concepts.html  console_8hpp_source.html  console__font_8hpp_source.html  (+33 more)
latex/: annotated.tex  bit__manipulation_8hpp_source.tex  cgl_8hpp_source.tex  character__buffer_8hpp_source.tex  classcgl_1_1CharacterBuffer.tex  classcgl_1_1Clock.tex  classcgl_1_1Color.tex  classcgl_1_1Console.tex  classcgl_1_1ConsoleFont.tex  classcgl_1_1Drawable.eps  classcgl_1_1Drawable.tex  classcgl_1_1Event.tex  classcgl_1_1EventManager.tex  classcgl_1_1FilterPipeline.tex  classcgl_1_1Framework.tex  classcgl_1_1GlobalMemory.tex  classcgl_1_1Matrix3.tex  classcgl_1_1ScreenBuffer.tex  classcgl_1_1Transform.tex  classcgl_1_1Transformable.eps  classcgl_1_1Transformable.tex  classcgl_1_1Vector2.tex  classcgl_1_1drawables_1_1Mesh.eps  classcgl_1_1drawables_1_1Mesh.tex  classcgl_1_1drawables_1_1Rectangle.eps  classcgl_1_1drawables_1_1Rectangle.tex  classcgl_1_1drawables_1_1Triangle.eps  classcgl_1_1drawables_1_1Triangle.tex  color_8hpp_source.tex  conceptcgl_1_1arithmetic.tex  concepts.tex  console_8hpp_source.tex  console__font_8hpp_source.tex  drawable_8hpp_source.tex  event_8hpp_source.tex  event__manager_8hpp_source.tex  files.tex  filters_8hpp_source.tex  framework_8hpp_source.tex  global__memory_8hpp_source.tex  (+28 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+119 more)
(+21 files in other folders)
